quote-stub-pod-ocp.yaml
#       Copyright 2017 IBM Corp All Rights Reserved

#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at

#       http://www.apache.org/licenses/LICENSE-2.0

#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#
# Deploy the qute-stb pod to virtualize the stock quote servoce
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: quote-stub
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: quote-stub
    spec:
      containers:
      - name: quote-stub
        image: stocktraderdemo/virtualsstubbase
        #command: ["cd /workspace && /bin/tini -- /IntegrationTester/RunTests -project /Project/stockquotestub.ghp -environment ubuntu -noHTTP -run 3293aa9f:167a43a6e8e:-7c32 -environmentTags env"]
        command: ["/bin/tini"] 
        args: [ "--", "/IntegrationTester/RunTests", "-project", "/workspace/Project/stockquotestub.ghp", "-environment", "ubuntu", "-noHTTP", "-run", "3293aa9f:167a43a6e8e:-7c32", "-environmentTags", "env" ]
        volumeMounts:
        - mountPath: /workspace
          name: cache-volume  
        #imagePullPolicy: Always
        ports:
          - containerPort: 31002
      volumes:
      - name: cache-volume
        emptyDir: {}


      #imagePullSecrets:
      #  - name: iks-cr-registry-secret
