quote-stub-svc-ocp.yaml
#
# Set the quiote stub service
#
apiVersion: v1
kind: Service
metadata:
  name: quote-stub
  labels:
    app: quote-stub
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 31002
  selector:
    app: quote-stub
