quote-stub-svc.yaml
#
# Update the stock-quote-service to point to the virtual service stub
#
apiVersion: v1
kind: Service
metadata:
  name: stock-quote-service
  labels:
    app: quote-stub
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 31002
  selector:
    app: quote-stub
