deploy.yaml
#       Copyright 2017 IBM Corp All Rights Reserved
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stock-quote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: quote-stub
    spec:
      containers:
      - name: quote-stub
        image: stocktraderdemo/quotestub:latest 
        imagePullPolicy: Always
        ports:
          - containerPort: 31002
        imagePullPolicy: Always
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: stock-quote-service
  labels:
    app: quote-stub
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 31002
  selector:
    app: quote-stub
---
#Configure the ingress 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stock-quote-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /stock-quote/.*
        backend:
          serviceName: stock-quote-service
          servicePort: 9080
